--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -33,6 +33,10 @@ strum                = { version = "0.25.0", default-features = false, features 
 void                 = { version = "1.0.2", default-features = false }
 usb-device           = { version = "0.2.9", optional = true }
 
+# atomic polyfill options
+portable-atomic              = { version = "1.5.1", default-features = false, optional = true }
+riscv-atomic-emulation-trap  = { version = "0.4.1", optional = true }
+
 # async
 embedded-hal-async = { version = "=1.0.0-rc.1", optional = true }
 embedded-io-async  = { version = "0.6.0", optional = true }
@@ -43,7 +47,6 @@ embassy-time       = { version = "0.1.5", optional = true, features = ["nightly"
 
 # RISC-V
 esp-riscv-rt                = { version = "0.5.0", optional = true, path = "../esp-riscv-rt" }
-riscv-atomic-emulation-trap = { version = "0.4.1", optional = true }
 
 # Xtensa
 xtensa-lx    = { version = "0.8.0",  optional = true }
@@ -125,8 +128,12 @@ embassy-time-systick = []
 embassy-time-timg0   = []
 
 # Architecture-specific features (intended for internal use)
-riscv  = ["critical-section/restore-state-u8", "esp-riscv-rt", "esp-riscv-rt/zero-bss", "riscv-atomic-emulation-trap"]
+riscv  = ["critical-section/restore-state-u8", "esp-riscv-rt", "esp-riscv-rt/zero-bss"]
 xtensa = ["critical-section/restore-state-u32"]
+
+portable-atomic = ["dep:portable-atomic"]
+riscv-atomic-emulation = ["dep:riscv-atomic-emulation-trap", "atomic-emulation"]
+atomic-emulation = []
 
 # Initialize / clear data sections and RTC memory
 rv-init-data     = ["esp-riscv-rt/init-data", "esp-riscv-rt/init-rw-text"]
