--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,13 +2,14 @@ name: CI
 
 on:
   pull_request:
-    branches:
-      - main
     paths-ignore:
       - "**/README.md"
   push:
+    branches-ignore:
+      - "gh-readonly-queue/**"
     paths-ignore:
       - "**/README.md"
+  merge_group:
   workflow_dispatch:
 
 env:
