--- a/esp-hal/Cargo.toml
+++ b/esp-hal/Cargo.toml
@@ -37,7 +37,9 @@ procmacros           = { version = "0.8.0", features = ["enum-dispatch", "ram"],
 strum                = { version = "0.25.0", default-features = false, features = ["derive"] }
 void                 = { version = "1.0.2", default-features = false }
 usb-device           = { version = "0.3.1", optional = true }
-rand_core            = { version = "0.6.4" }
+# temporary
+esp-println        = { version = "0.8.0", features = ["esp32c6"] }
+
 
 # async
 embedded-hal-async   = { version = "1.0.0", optional = true }
